[package]
name = "axum-async-graphl"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { version = "1.0.82", features = ["backtrace"] }
tokio = { version = "1.37.0", features = ["full"] }
axum = { version = "0.7.4",  features = ["multipart"] }
axum-macros = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.18"
async-graphql= { version = "7.0.7", features = ["chrono"] }
#chrono = { version = "0.4.38", features = ["serde"] }
